# ESP32_PWM

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF.md  README.md  README.zh-TW.md  partitions.csv  project_plan.md  sdkconfig.defaults
components/app_api/: CMakeLists.txt
components/app_api/include/: app_api.h
components/gpio_io/: gpio_io.c
components/ip_announcer/: CMakeLists.txt  Kconfig  ip_announcer.c  ip_announcer_push.c
components/ip_announcer/include/: ip_announcer.h
components/net_dashboard/: CMakeLists.txt  captive_portal.c  captive_portal.h  dns_hijack.c  mdns_svc.c  mdns_svc.h  net_dashboard.c  prov_internal.h  provisioning.c  ws_handler.c
components/net_dashboard/include/: net_dashboard.h
components/net_dashboard/web/: app.css  app.js  index.html  setup.html  success.html
components/ota_core/: CMakeLists.txt  ota_core.c
components/ota_core/include/: ota_core.h
components/psu_driver/: CMakeLists.txt  Kconfig.projbuild  psu_driver.c  psu_riden.c  psu_wz5005.c  psu_xy_sk120.c
components/psu_driver/include/: psu_driver.h
components/psu_modbus/: CMakeLists.txt  psu_modbus.c
components/pwm_gen/: CMakeLists.txt  pwm_gen.c
components/rpm_cap/: CMakeLists.txt  rpm_cap.c
components/ui_settings/: CMakeLists.txt  ui_settings.c
components/usb_composite/: CMakeLists.txt  usb_cdc_task.c  usb_composite.c  usb_descriptors.c  usb_hid_task.c
components/usb_composite/include/: usb_composite.h  usb_protocol.h
docs/: first-time-setup.md  release-hardening.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  control_task.c  idf_component.yml
(+13 files in other folders)
